# shell-rust

./: CLAUDE.md  Cargo.toml  README.md
src/: main.rs
