[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
reedline = "0.42.0"
rustyline = "17.0.1"
shlex = "1.3.0"
thiserror = "1.0.38"                             # error handling
winnow = "0.6"                                   # parser combinators
